# zephyr

./: CMakeLists.txt  west.yml
.devcontainer/: devcontainer.json
arch/: Kconfig
arch/systemc/: CMakeLists.txt  Kconfig
arch/systemc/core/: CMakeLists.txt  core.c
arch/systemc/include/: kernel_arch_func.h
boards/systemc/cortex_sim/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  cortex_sim.dts  cortex_sim_defconfig  esimp.cpp  log.c
cmake/compiler/clang/: target.cmake
drivers/console/: CMakeLists.txt  systemc_console.c
drivers/gpio/: CMakeLists.txt  Kconfig  Kconfig.esimp  gpio_esimp.c
drivers/serial/: CMakeLists.txt  Kconfig  Kconfig.esimp  uart_esimp.c
drivers/timer/: CMakeLists.txt  Kconfig  Kconfig.esimp  systemc_timer.c
dts/bindings/: vendor-prefixes.txt
dts/bindings/gpio/: esimp,gpio.yaml
dts/bindings/serial/: esimp,uart.yaml
include/zephyr/arch/: cpu.h
include/zephyr/kernel/: thread.h
include/zephyr/linker/: linker-tool-gcc.h
include/zephyr/toolchain/: common.h  gcc.h  zephyr_stdint.h
include/zephyr/tracing/: tracing.h
kernel/: init.c  thread.c
kernel/include/: kernel_arch_interface.h  ksched.h
modules/: Kconfig  Kconfig.esimp
samples/esimp/basic/: build.sh
samples/esimp/uart/: build.sh
samples/esimp/uart/platform/: CMakeLists.txt
samples/esimp/uart/platform/src/: main.cpp
soc/systemc/: CMakeLists.txt
subsys/logging/: CMakeLists.txt  Kconfig.backends  log_backend_systemc.c
subsys/tracing/: CMakeLists.txt  Kconfig
tests/platform/: CMakeLists.txt
tests/test/: CMakeLists.txt  prj.conf
(+32 files in other folders)
